Exception Handling Added